Fix: overflow scroll on game card body

--- a/src/assets/css/GameCard.css
+++ b/src/assets/css/GameCard.css
@@ -3,3 +3,7 @@
     border: 1px solid #707070;
     border-radius: 1.3rem;
 }
+
+.display-card-body {
+    overflow-y: auto;
+}
